--- a/.github/workflows/flake-updates.yml
+++ b/.github/workflows/flake-updates.yml
@@ -10,6 +10,9 @@ jobs:
     if: github.ref == 'refs/heads/master' # ensure workflow_dispatch only runs on master
     steps:
       - uses: actions/checkout@v6
+        with:
+          # https://github.com/DeterminateSystems/update-flake-lock/issues/223
+          persist-credentials: false
       - name: Install Nix
         uses: cachix/install-nix-action@v31
         with:
