--- a/terraform/.envrc
+++ b/terraform/.envrc
@@ -4,5 +4,6 @@ env_vars_required GITHUB_TOKEN
 
 use flake .#terraform
 
+TF_CLI_CONFIG_FILE="$PWD/config.tfrc"
 TF_VAR_passphrase="$(sops -d --extract '["passphrase"]' secrets.yaml)"
-export PGPORT=5433 TF_VAR_passphrase
+export TF_CLI_CONFIG_FILE TF_VAR_passphrase
