set env_vars_required in .envrc

--- a/terraform/.envrc
+++ b/terraform/.envrc
@@ -1,5 +1,7 @@
 # shellcheck shell=bash
 
+env_vars_required GITHUB_TOKEN
+
 use flake .#terraform
 
 TF_VAR_passphrase="$(sops -d --extract '["passphrase"]' secrets.yaml)"
