--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,3 @@
-[tool.mypy]
-python_version = "3.13"
-warn_redundant_casts = true
-disallow_untyped_calls = true
-disallow_untyped_defs = true
-no_implicit_optional = true
-
 [tool.ruff.lint]
 select = ["ALL"]
 ignore = [
@@ -32,3 +25,6 @@ ignore = [
   "S101",
   "SIM117",
 ]
+
+[tool.ty.terminal]
+error-on-warning = true
