--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,34 @@
-[tool.ruff]
-line-length = 88
-
-[tool.ruff.lint]
-select = ["E", "F", "I"]
-ignore = [ "E501" ]
-
-
 [tool.mypy]
 python_version = "3.13"
 warn_redundant_casts = true
 disallow_untyped_calls = true
 disallow_untyped_defs = true
 no_implicit_optional = true
+
+[tool.ruff.lint]
+select = ["ALL"]
+ignore = [
+  "COM812",
+  "D",
+  "E501",
+  "T201",
+]
+
+[tool.ruff.lint.per-file-ignores]
+"hosts/build02/*.py" = [
+  "ANN",
+  "ASYNC240",
+  "C901",
+  "EXE001",
+  "FBT",
+  "FLY002",
+  "INP001",
+  "N",
+  "PGH003",
+  "PLR",
+  "PT009",
+  "PTH",
+  "RET504",
+  "S101",
+  "SIM117",
+]
