terraform: switch back to tf cloud

--- a/terraform/.envrc
+++ b/terraform/.envrc
@@ -1,8 +1,8 @@
 # shellcheck shell=bash
 
-env_vars_required GITHUB_TOKEN
+env_vars_required GITHUB_TOKEN TF_TOKEN_app_terraform_io TFE_TOKEN
 
 use flake .#terraform
 
 TF_VAR_passphrase="$(sops -d --extract '["passphrase"]' secrets.yaml)"
-export PGPORT=5433 TF_VAR_passphrase
+export TF_VAR_passphrase
